--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,19 @@
   "compilerOptions": {
     "target": "es5",
     "allowJs": true,
-    "skipDefaultLibCheck": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "commonjs",
+    "declaration": true,
+    "outDir": "./lib",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-//    "isolatedModules": true,
-    "noEmit": true,
+    "isolatedModules": true,
     "lib": ["es5"],
     "noUncheckedIndexedAccess": true
   },
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
